...
        switch opcode {
        case 0x01:
            result = .reset
        case 0x02:
            let information = try cursor.uint8(field: "Control Information")
            let meaning = switch information {
            case 0x01: "Stop"
            case 0x02: "Pause"
            default: "Unknown or reserved"
            }
            result = .stoppedOrPausedByUser(controlInformation: information, meaning: meaning)
        case 0x03:
            result = .stoppedBySafetyKey
        case 0x04:
...
